--- a/index.html
+++ b/index.html
@@ -147,11 +147,15 @@
           <span class="sr-only">카테고리 열기</span>
         </button>
       </header>
-      <aside></aside>
+      <aside>
+        <div class="px-5 py-[9px]">
+          <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fsnow-jun-0.github.io%2Fweniv_blog%2F&count_bg=%237EC8AA&title_bg=%23313030&icon=adobeillustrator.svg&icon_color=%23A6A3A3&title=Counter&edge_flat=false"/></a>
+        </div>
+      </aside>
     </section>
     <!-- // category 검색 영역 -->
 
-    <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fsnow-jun-0.github.io%2Fweniv_blog%2F&count_bg=%237EC8AA&title_bg=%23313030&icon=adobeillustrator.svg&icon_color=%23A6A3A3&title=Counter&edge_flat=false"/></a>
+    
 
     <!-- utils -->
     <script src="js/utils.js"></script>
